src/snapshots/tptp__fof__tests__fof_system_term.snap
---
source: src/fof.rs
expression: parsed
---
Constant(
    SystemConstant(
        SystemFunctor(
            AtomicSystemWord(
                DollarDollarWord(
                    LowerWord(
                        "c",
                    ),
                ),
            ),
        ),
    ),
)
