src/snapshots/tptp__fof__tests__fof_term-3.snap
---
source: src/fof.rs
expression: parsed
---
Variable(
    Variable(
        UpperWord(
            "X",
        ),
    ),
)
