src/snapshots/tptp__fof__tests__fof_term.snap
---
source: src/fof.rs
expression: parsed
---
Function(
    Plain(
        Function(
            Functor(
                Lower(
                    LowerWord(
                        "f",
                    ),
                ),
            ),
            Arguments(
                [
                    Variable(
                        Variable(
                            UpperWord(
                                "X",
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
