src/snapshots/tptp__fof__tests__fof_unary_formula.snap
---
source: src/fof.rs
expression: parsed
---
Unary(
    UnaryConnective,
    Unitary(
        Atomic(
            Defined(
                Plain(
                    DefinedPlainFormula(
                        Constant(
                            DefinedConstant(
                                DefinedFunctor(
                                    AtomicDefinedWord(
                                        DollarWord(
                                            LowerWord(
                                                "true",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
