src/snapshots/tptp__fof__tests__fof_unit_formula-3.snap
---
source: src/fof.rs
expression: parsed
---
Unary(
    Unary(
        UnaryConnective,
        Unitary(
            Atomic(
                Defined(
                    Plain(
                        DefinedPlainFormula(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
