src/snapshots/tptp__fof__tests__fof_unit_formula.snap
---
source: src/fof.rs
expression: parsed
---
Unitary(
    Parenthesised(
        Unitary(
            Atomic(
                Defined(
                    Plain(
                        DefinedPlainFormula(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
