src/snapshots/tptp__fof__tests__fof_unitary_formula-3.snap
---
source: src/fof.rs
expression: parsed
---
Atomic(
    Defined(
        Plain(
            DefinedPlainFormula(
                Constant(
                    DefinedConstant(
                        DefinedFunctor(
                            AtomicDefinedWord(
                                DollarWord(
                                    LowerWord(
                                        "true",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
