src/snapshots/tptp__fof__tests__fof_unitary_formula-5.snap
---
source: src/fof.rs
expression: parsed
---
Quantified(
    QuantifiedFormula {
        quantifier: Forall,
        bound: VariableList(
            [
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ],
        ),
        formula: Unitary(
            Atomic(
                Defined(
                    Plain(
                        DefinedPlainFormula(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
