src/snapshots/tptp__fof__tests__fof_unitary_formula.snap
---
source: src/fof.rs
expression: parsed
---
Parenthesised(
    Unitary(
        Atomic(
            Defined(
                Plain(
                    DefinedPlainFormula(
                        Constant(
                            DefinedConstant(
                                DefinedFunctor(
                                    AtomicDefinedWord(
                                        DollarWord(
                                            LowerWord(
                                                "true",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
